fix #div1 p too big

--- a/css/home.css
+++ b/css/home.css
@@ -30,7 +30,7 @@ h1 {
 }
 
 #div1 p {
-    font: italic normal 1.2em georgia;
+    font: italic normal 1em georgia;
     text-align: center;
     text-shadow: 0;
 }
